--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsultList.cshtml
@@ -1046,12 +1046,12 @@
                     break;
                 case 'success':
                     // 只在預約時段時顯示「開始諮詢」，尚未到來皆顯示「等待中」
-                    footerBtnSuccess = footerBtnSuccess.replace('{cid}', data.cid).replace('{starBtnText}', data.release ? '開始諮詢' : '等待中').replace('{isDisabled}', data.release ? '' : 'is-disabled');
+                    footerBtnSuccess = footerBtnSuccess.replaceAll('{cid}', data.cid).replace('{starBtnText}', data.release ? '開始諮詢' : '等待中').replace('{isDisabled}', data.release ? '' : 'is-disabled');
                     $footerWrapper = $footerWrapper.replace('{btns}', footerBtnSuccess);
                     $floatingEl = $floatingEl.replace('${footer}', $footerWrapper);
                     break;
                 case 'reserving':
-                    footerBtnReserving = footerBtnReserving.replace('{cid}', data.cid);
+                    footerBtnReserving = footerBtnReserving.replaceAll('{cid}', data.cid);
                     $footerWrapper = $footerWrapper.replace('{btns}', footerBtnReserving);
                     $floatingEl = $floatingEl.replace('${footer}', $footerWrapper);
                     break;
