全球指數>上方牌卡左右邊少了箭頭

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexMainstage.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexMainstage.cshtml
@@ -95,9 +95,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-button-next c-swiper__next u-hidden@dt-only"></div>
-                <div class="swiper-button-prev c-swiper__prev u-hidden@dt-only"></div>
-                <div class="swiper-pagination c-swiper__pagination"></div>
+                <div class="c-swiper__tool">
+                    <div class="swiper-button-prev c-swiper__prev"></div>
+                    <div class="swiper-pagination c-swiper__pagination"></div>
+                    <div class="swiper-button-next c-swiper__next"></div>
+                </div>
             </div>
         </div>
     </div>
