--- a/src/Project/Wealth/platform/themes/css/main.css
+++ b/src/Project/Wealth/platform/themes/css/main.css
@@ -292,6 +292,33 @@ textarea {
   .c-swiper--3rows {
     height: 475px;
   }
+  .c-swiper__tool {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 28px;
+    margin-top: 24px;
+  }
+  .c-swiper .c-swiper__tool .c-swiper__pagination, .c-swiper .c-swiper__tool .c-swiper__prev, .c-swiper .c-swiper__tool .c-swiper__next {
+    flex: 0 0 auto;
+    position: static;
+    margin: 0;
+    padding: 0;
+    transform: none;
+  }
+  .c-swiper .c-swiper__tool .c-swiper__pagination {
+    width: auto;
+    line-height: 0;
+  }
+  .c-swiper.has-dtArrow {
+    padding-bottom: 0;
+  }
+  .c-swiper.has-dtArrow.has-shadow {
+    margin-bottom: 0;
+  }
+  .c-swiper.has-shadow .c-swiper__tool {
+    margin-top: 16px;
+  }
 }
 @media only screen and (max-width: 1199px) {
   .c-swiper--kv {
@@ -1898,15 +1925,15 @@ textarea {
 .c-member {
   display: flex;
   align-items: center;
-  padding: 24px 20px 24px 40px;
+  padding: 24px 20px 24px 24px;
   border-radius: 0px 12px 12px 0px;
   border-left: 4px solid #238C6C;
   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
   background: #FFF;
 }
 .c-member__head {
-  flex: 0 0 auto;
-  width: 178px;
+  flex: 1 0 auto;
+  width: 121px;
 }
 .c-member__name {
   font-size: 28px;
@@ -1916,10 +1943,10 @@ textarea {
   margin-top: 12px;
 }
 .c-member__content {
-  flex: 1;
+  flex: 4 1 auto;
   position: relative;
   display: flex;
-  margin-left: 16px;
+  margin-left: 20px;
 }
 .c-member__content::before {
   content: "";
@@ -1932,13 +1959,17 @@ textarea {
   background-color: #EBEBEB;
 }
 .c-member__info {
-  margin-left: 40px;
+  flex: 1 1 auto;
+  margin-left: 20px;
 }
 .c-member__title {
   display: inline-flex;
   gap: 4px;
-  align-items: center;
+  align-items: flex-start;
   color: #6E6E6E;
+}
+.c-member__title img {
+  margin: 4px 0;
 }
 .c-member__value {
   margin-top: 12px;
@@ -5537,6 +5568,9 @@ ul.l-flex {
   }
 }
 
+.u-flex-gap-ultra {
+  gap: 40px;
+}
 .u-flex-gap-max {
   gap: 32px;
 }
@@ -5559,6 +5593,9 @@ ul.l-flex {
   gap: 8px;
 }
 @media only screen and (max-width: 1199px) {
+  .u-flex-gap-ultra\@lt {
+    gap: 40px;
+  }
   .u-flex-gap-max\@lt {
     gap: 32px;
   }
@@ -5582,6 +5619,9 @@ ul.l-flex {
   }
 }
 @media only screen and (min-width: 768px) {
+  .u-flex-gap-ultra\@lt-up {
+    gap: 40px;
+  }
   .u-flex-gap-max\@lt-up {
     gap: 32px;
   }
@@ -5605,6 +5645,9 @@ ul.l-flex {
   }
 }
 @media only screen and (min-width: 1200px) {
+  .u-flex-gap-ultra\@dt-only {
+    gap: 40px;
+  }
   .u-flex-gap-max\@dt-only {
     gap: 32px;
   }
@@ -5628,6 +5671,9 @@ ul.l-flex {
   }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
+  .u-flex-gap-ultra\@lt-only {
+    gap: 40px;
+  }
   .u-flex-gap-max\@lt-only {
     gap: 32px;
   }
@@ -5651,6 +5697,9 @@ ul.l-flex {
   }
 }
 @media only screen and (max-width: 767px) {
+  .u-flex-gap-ultra\@mb-only {
+    gap: 40px;
+  }
   .u-flex-gap-max\@mb-only {
     gap: 32px;
   }
@@ -5674,6 +5723,10 @@ ul.l-flex {
   }
 }
 
+.u-flex-gap-col-ultra {
+  -moz-column-gap: 40px;
+       column-gap: 40px;
+}
 .u-flex-gap-col-max {
   -moz-column-gap: 32px;
        column-gap: 32px;
@@ -5703,6 +5756,10 @@ ul.l-flex {
        column-gap: 8px;
 }
 @media only screen and (max-width: 1199px) {
+  .u-flex-gap-col-ultra\@lt {
+    -moz-column-gap: 40px;
+         column-gap: 40px;
+  }
   .u-flex-gap-col-max\@lt {
     -moz-column-gap: 32px;
          column-gap: 32px;
@@ -5733,6 +5790,10 @@ ul.l-flex {
   }
 }
 @media only screen and (min-width: 768px) {
+  .u-flex-gap-col-ultra\@lt-up {
+    -moz-column-gap: 40px;
+         column-gap: 40px;
+  }
   .u-flex-gap-col-max\@lt-up {
     -moz-column-gap: 32px;
          column-gap: 32px;
@@ -5763,6 +5824,10 @@ ul.l-flex {
   }
 }
 @media only screen and (min-width: 1200px) {
+  .u-flex-gap-col-ultra\@dt-only {
+    -moz-column-gap: 40px;
+         column-gap: 40px;
+  }
   .u-flex-gap-col-max\@dt-only {
     -moz-column-gap: 32px;
          column-gap: 32px;
@@ -5793,6 +5858,10 @@ ul.l-flex {
   }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
+  .u-flex-gap-col-ultra\@lt-only {
+    -moz-column-gap: 40px;
+         column-gap: 40px;
+  }
   .u-flex-gap-col-max\@lt-only {
     -moz-column-gap: 32px;
          column-gap: 32px;
@@ -5823,6 +5892,10 @@ ul.l-flex {
   }
 }
 @media only screen and (max-width: 767px) {
+  .u-flex-gap-col-ultra\@mb-only {
+    -moz-column-gap: 40px;
+         column-gap: 40px;
+  }
   .u-flex-gap-col-max\@mb-only {
     -moz-column-gap: 32px;
          column-gap: 32px;
@@ -5853,6 +5926,9 @@ ul.l-flex {
   }
 }
 
+.u-flex-gap-row-ultra {
+  row-gap: 40px;
+}
 .u-flex-gap-row-max {
   row-gap: 32px;
 }
@@ -5875,6 +5951,9 @@ ul.l-flex {
   row-gap: 8px;
 }
 @media only screen and (max-width: 1199px) {
+  .u-flex-gap-row-ultra\@lt {
+    row-gap: 40px;
+  }
   .u-flex-gap-row-max\@lt {
     row-gap: 32px;
   }
@@ -5898,6 +5977,9 @@ ul.l-flex {
   }
 }
 @media only screen and (min-width: 768px) {
+  .u-flex-gap-row-ultra\@lt-up {
+    row-gap: 40px;
+  }
   .u-flex-gap-row-max\@lt-up {
     row-gap: 32px;
   }
@@ -5921,6 +6003,9 @@ ul.l-flex {
   }
 }
 @media only screen and (min-width: 1200px) {
+  .u-flex-gap-row-ultra\@dt-only {
+    row-gap: 40px;
+  }
   .u-flex-gap-row-max\@dt-only {
     row-gap: 32px;
   }
@@ -5944,6 +6029,9 @@ ul.l-flex {
   }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
+  .u-flex-gap-row-ultra\@lt-only {
+    row-gap: 40px;
+  }
   .u-flex-gap-row-max\@lt-only {
     row-gap: 32px;
   }
@@ -5967,6 +6055,9 @@ ul.l-flex {
   }
 }
 @media only screen and (max-width: 767px) {
+  .u-flex-gap-row-ultra\@mb-only {
+    row-gap: 40px;
+  }
   .u-flex-gap-row-max\@mb-only {
     row-gap: 32px;
   }
@@ -9841,9 +9932,29 @@ button.mfp-close:active {
   font-weight: bold;
   border-bottom-color: var(--Primary-Primary, #238C6C);
 }
+.c-tab__item.is-active .c-tab__num {
+  color: #fff;
+  background-color: var(--Primary-Primary, #238C6C);
+}
+
 .c-tab__item:hover {
   font-weight: bold;
   color: var(--Secondary-Green-Hover, #238C6C);
+}
+.c-tab__item:hover .c-tab__num {
+  color: #fff;
+  background-color: var(--Primary-Primary, #238C6C);
+}
+
+.c-tab__num {
+  display: inline-block;
+  margin-left: 4px;
+  padding: 0 6px;
+  font-size: 13px;
+  border-radius: 10px;
+  background-color: #F6F6F6;
+  transform: translateY(-2px);
+  transition: all 0.3s ease;
 }
 .c-tab__collapse {
   display: none;
@@ -9896,6 +10007,17 @@ button.mfp-close:active {
   background-color: var(--Primary-Primary, #238C6C);
   border-color: var(--Primary-Primary, #238C6C);
 }
+.c-tab__clone.is-active .c-tab__num {
+  color: var(--Primary-Primary, #238C6C);
+  background-color: #fff;
+}
+
+.c-tab__clone .c-tab__num {
+  align-self: center;
+  font-size: 12px;
+  transform: none;
+}
+
 .c-tab__panel {
   position: relative;
   max-height: 0;
@@ -10005,7 +10127,8 @@ button.mfp-close:active {
   background: #238C6C;
 }
 .c-tab--pellet .c-tab__item.is-active .c-tab__num {
-  color: #238C6C;
+  color: var(--Primary-Primary, #238C6C);
+  background-color: #fff;
 }
 
 .c-tab--pellet .c-tab__item:not(.is-active):hover {
@@ -10013,12 +10136,14 @@ button.mfp-close:active {
   background: #EAF7EC;
   color: #222;
 }
+.c-tab--pellet .c-tab__item:not(.is-active):hover .c-tab__num {
+  color: #222;
+  background-color: #fff;
+}
+
 .c-tab--pellet .c-tab__num {
-  margin-left: 4px;
-  padding: 0 6px;
-  font-size: 13px;
-  border-radius: 10px;
-  background-color: #FFF;
+  background-color: #fff;
+  transform: translateY(-1px);
 }
 .c-tab--weather .c-tab__header {
   text-align: left;
@@ -14496,6 +14621,93 @@ ul.l-tag {
 @media only screen and (max-width: 767px) {
   .u-justify-end\@mb-only {
     justify-content: flex-end;
+  }
+}
+
+.u-align-start {
+  align-items: flex-start;
+}
+@media only screen and (max-width: 1199px) {
+  .u-align-start\@lt {
+    align-items: flex-start;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .u-align-start\@lt-up {
+    align-items: flex-start;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .u-align-start\@dt-only {
+    align-items: flex-start;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .u-align-start\@lt-only {
+    align-items: flex-start;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .u-align-start\@mb-only {
+    align-items: flex-start;
+  }
+}
+
+.u-align-center {
+  align-items: center;
+}
+@media only screen and (max-width: 1199px) {
+  .u-align-center\@lt {
+    align-items: center;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .u-align-center\@lt-up {
+    align-items: center;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .u-align-center\@dt-only {
+    align-items: center;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .u-align-center\@lt-only {
+    align-items: center;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .u-align-center\@mb-only {
+    align-items: center;
+  }
+}
+
+.u-align-end {
+  align-items: flex-end;
+}
+@media only screen and (max-width: 1199px) {
+  .u-align-end\@lt {
+    align-items: flex-end;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .u-align-end\@lt-up {
+    align-items: flex-end;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .u-align-end\@dt-only {
+    align-items: flex-end;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .u-align-end\@lt-only {
+    align-items: flex-end;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .u-align-end\@mb-only {
+    align-items: flex-end;
   }
 }
 
