修正行事曆開始諮詢

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultList.cshtml
@@ -1029,7 +1029,7 @@
         });
 
         // 開始諮詢
-        $('body').on('click.start', '[data-start-btn]', function () {
+        $('body').on('click.start', '[data-start-btn]', function (e) {
             e.preventDefault();
 
             // 開始諮詢的該筆資料
