--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
@@ -1112,7 +1112,7 @@
         });
 
         // 開始諮詢
-        $('body').on('click.start', '[data-start-btn]', function () {
+        $('body').on('click.start', '[data-start-btn]', function (e) {
             e.preventDefault();
 
             // 開始諮詢的該筆資料
