Update：全產品搜尋頁－在各商品 Tab 顯示筆數

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/_ProductSearchResult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/_ProductSearchResult.cshtml
@@ -28,18 +28,18 @@
                 <!-- .is-active: 作用中的項目 -->
                 <!-- [data-tab-target]: 值需對應 [data-tab-panel-id] 的值，按下後會自動顯示相對的 panel -->
                 <!-- 若為外連，不要賦予[data-tab-target]屬性 -->
-                <li><a href="#" class="c-tab__item is-active" target="_self" title="基金" data-tab-target="tab-1" data-filter-switch-columns="fundTable">基金</a></li>
-                <li><a href="#" class="c-tab__item" target="_self" title="ETF" data-tab-target="tab-2" data-filter-switch-columns="etfTable">ETF</a></li>
-                <li><a href="#" class="c-tab__item" target="_self" title="結構型商品" data-tab-target="tab-3" data-filter-switch-columns="sipTable" data-filter-switch="#uid-template-sip">結構型商品</a></li>
-                <li><a href="#" class="c-tab__item" target="_self" title="國外股票" data-tab-target="tab-4" data-filter-switch-columns="foreignstockTable" data-filter-switch="#uid-template-fstock">國外股票</a></li>
+                <li><a href="#" class="c-tab__item is-active" target="_self" title="基金" data-tab-target="tab-1" data-filter-switch-columns="fundTable">基金<span class="c-tab__num" data-uid-producttype="fund">0</span></a></li>
+                <li><a href="#" class="c-tab__item" target="_self" title="ETF" data-tab-target="tab-2" data-filter-switch-columns="etfTable">ETF<span class="c-tab__num" data-uid-producttype="etf">0</span></a></li>
+                <li><a href="#" class="c-tab__item" target="_self" title="結構型商品" data-tab-target="tab-3" data-filter-switch-columns="sipTable" data-filter-switch="#uid-template-sip">結構型商品<span class="c-tab__num" data-uid-producttype="sip">0</span></a></li>
+                <li><a href="#" class="c-tab__item" target="_self" title="國外股票" data-tab-target="tab-4" data-filter-switch-columns="foreignstockTable" data-filter-switch="#uid-template-fstock">國外股票<span class="c-tab__num" data-uid-producttype="fstock">0</span></a></li>
             </ul>
             <div class="c-tab__collapse">
                 <a href="#" class="c-tab__switch"></a>
                 <div class="c-tab__dropdown">
-                    <a href="#" class="c-tab__clone is-active" target="_self" title="基金" data-tab-target="tab-1" data-filter-switch-columns="fundTable">基金</a>
-                    <a href="#" class="c-tab__clone" target="_self" title="ETF" data-tab-target="tab-2" data-filter-switch-columns="etfTable">ETF</a>
-                    <a href="#" class="c-tab__clone" target="_self" title="結構型商品" data-tab-target="tab-3" data-filter-switch-columns="sipTable" data-filter-switch="#uid-template-sip">結構型商品</a>
-                    <a href="#" class="c-tab__clone" target="_self" title="國外股票" data-tab-target="tab-4" data-filter-switch-columns="foreignstockTable" data-filter-switch="#uid-template-fstock">國外股票</a>
+                    <a href="#" class="c-tab__clone is-active" target="_self" title="基金" data-tab-target="tab-1" data-filter-switch-columns="fundTable">基金<span class="c-tab__num" data-uid-producttype="fund">0</span></a>
+                    <a href="#" class="c-tab__clone" target="_self" title="ETF" data-tab-target="tab-2" data-filter-switch-columns="etfTable">ETF<span class="c-tab__num" data-uid-producttype="etf">0</span></a>
+                    <a href="#" class="c-tab__clone" target="_self" title="結構型商品" data-tab-target="tab-3" data-filter-switch-columns="sipTable" data-filter-switch="#uid-template-sip">結構型商品<span class="c-tab__num" data-uid-producttype="sip">0</span></a>
+                    <a href="#" class="c-tab__clone" target="_self" title="國外股票" data-tab-target="tab-4" data-filter-switch-columns="foreignstockTable" data-filter-switch="#uid-template-fstock">國外股票<span class="c-tab__num" data-uid-producttype="fstock">0</span></a>
                 </div>
             </div>
         </div>
